--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "postinstall": "echo 'Post-install script completed'"
   },
   "dependencies": {
     "jspdf": "^3.0.1",
@@ -25,5 +26,8 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "vite": "^7.0.6"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
